--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "less-middleware": "~2.2.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "ws": "^7.4.0"
+  },
+  "optionalDependencies": {
+    "utf-8-validate": "^5.0.3"
   }
 }
